--- a/package.json
+++ b/package.json
@@ -10,12 +10,30 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "formik": "^2.4.6",
+    "i18next": "^23.12.2",
+    "iconsax-react-native": "^0.0.8",
+    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
+    "react-i18next": "^15.0.0",
     "react-native": "0.74.4",
+    "react-native-gesture-handler": "^2.18.1",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.33.0"
+    "react-native-screens": "^3.33.0",
+    "react-native-svg": "^15.4.0",
+    "react-native-ui-lib": "^7.27.1",
+    "react-native-vector-icons": "^10.1.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
